--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ will be held on Jan 4, 2022, in conjunction with
 
 <li>
 <p>
-Our challenge <a href="https://eval.ai/web/challenges/challenge-page/1041/overview" target="_blank">Open-World Image Classification<img src="aimerykong.github.io/open-world-vision_files/logo.png", width="20"></a> is online now! The challenge will be held in conjunction with
-our <a href="aimerykong.github.io/open-world-vision.html">Open World Vision workshop</a> and <a href="http://cvpr2021.thecvf.com/" target="_blank">CVPR'21 <img src="./aimerykong_files/logo_cvpr2021.png", width="45"></a>
+Our challenge <a href="https://eval.ai/web/challenges/challenge-page/1041/overview" target="_blank">Open-World Image Classification<img src="http://vplow.github.io/open-world-vision_files/logo.png", width="20"></a> is online now! The challenge will be held in conjunction with
+our <a href="http://vplow.github.io/open-world-vision.html">Open World Vision workshop</a> and <a href="http://cvpr2021.thecvf.com/" target="_blank">CVPR'21 <img src="./aimerykong_files/logo_cvpr2021.png", width="45"></a>
 (5/14/2021)
 </p>
 </li>
@@ -158,8 +158,8 @@ our <a href="aimerykong.github.io/open-world-vision.html">Open World Vision work
 
 <li>
 <p>
-Our virtual workshop <a href="aimerykong.github.io/open-world-vision.html" target="_blank">Open-World Vision
-	<img src="aimerykong.github.io/open-world-vision_files/logo.png", width="20"></a> will be held in conjunction with 
+Our virtual workshop <a href="http://vplow.github.io/open-world-vision.html" target="_blank">Open-World Vision
+	<img src="http://vplow.github.io/open-world-vision_files/logo.png", width="20"></a> will be held in conjunction with 
 <a href="http://cvpr2021.thecvf.com/" target="_blank">CVPR'21 <img src="./aimerykong_files/logo_cvpr2021.png", width="45"></a>  
 (12/11/2020)
 </p>
