--- a/OpenGAN.html
+++ b/OpenGAN.html
@@ -39,7 +39,7 @@ a.invisible { color : inherit; text-decoration : inherit; }
 
 
 <p align="center">
-          <a href="http://www.cs.cmu.edu/~shuk/" target="_blank">Shu Kong</a>   &nbsp;&nbsp;&nbsp; 
+          <a href="http://aimerykong.github.io" target="_blank">Shu Kong</a>   &nbsp;&nbsp;&nbsp; 
           <a href="http://www.cs.cmu.edu/~deva/" target="_blank">Deva Ramanan</a>
 </p>
 
