--- a/publication.html
+++ b/publication.html
@@ -87,7 +87,7 @@ Methods in Ecology and Evolution, 2022. (to appear)
 	"<font color=#AF7817>OpenGAN: Open-Set Recognition via Open Data Generation</font>", <a href="http://iccv2021.thecvf.com/">ICCV</a>, 2021
 <!--a href="https://arxiv.org/abs/2104.02939">preprint arXiv:2104.02939</a-->
 <br>
-[<a href="https://www.cs.cmu.edu/~shuk/OpenGAN.html">webpage</a>]
+[<a href="http://aimerykong.github.io/OpenGAN.html">webpage</a>]
 [<a href="https://arxiv.org/abs/2104.02939">paper</a>]
 [<a href="https://github.com/aimerykong/OpenGAN">github</a>]
 [<a href="./img/OpenGAN_poster.pdf">poster</a>]
