--- a/publication.html
+++ b/publication.html
@@ -34,10 +34,45 @@
 <ul>
 <li>
 <div class="publication">
+        <p>
+	<a href="https://sites.google.com/media.ee.ntu.edu.tw/yitingchen">Yi-Ting Chen</a><sup>*</sup>, 
+		<a href="https://www.linkedin.com/in/jinghao-shi-82371919b/">Jinghao Shi</a><sup>*</sup>, 
+		<a href="https://www.linkedin.com/in/zelinye/">Zelin Ye</a><sup>*</sup>, 
+		<a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>,
+        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, S. Kong<sup>#</sup>,
+"<font color=#AF7817>Multimodal Object Detection via Probabilistic Ensembling</font>", ECCV, 2022
+<a href="https://arxiv.org/abs/2104.02904">arXiv:2104.02904</a>
+<br>
+[<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">project page</a>]
+[<a href="https://github.com/Jamie725/RGBT-detection">github</a>]
+[<a href="https://youtu.be/VH7826g8u7c">video demo</a>]
+</p>
+</div>
+</li>
+	
+	
+	
+<li>
+<div class="publication">
 <p>
-S. Punyasena*, D. Haselhorst*,  S. Kong*, C. Fowlkes, J. Moreno,
+S. Kong, D. Ramanan,
+"<a href="https://ieeexplore.ieee.org/document/9799769"><font color=#AF7817>OpenGAN: Open-Set Recognition via Open Data Generation</font></a>",
+IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI), 2022.
+<br>
+[<a href="https://ieeexplore.ieee.org/document/9799769">paper</a>]
+[<a href="https://www.cs.cmu.edu/~shuk/OpenGAN.html">page</a>]
+[<a href="https://github.com/aimerykong/OpenGAN">code</a>]
+</p>
+</div>
+</li>
+	
+	
+<li>
+<div class="publication">
+<p>
+S. Punyasena<sup>*</sup>, D. Haselhorst<sup>*</sup>,  S. Kong<sup>*</sup>, C. Fowlkes, J. Moreno,
 "<a href="https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.13917"><font color=#AF7817>Automated Identification of Diverse Neotropical Pollen Samples using Convolutional Neural Networks</font></a>",
-Methods in Ecology and Evolution, 2022. (to appear)
+Methods in Ecology and Evolution, 2022.
 <br>
 [<a href="https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.13917">paper</a>]
 [<a href="https://www.ics.uci.edu/~skong2/pollen_BIC.html">page</a>]
@@ -45,7 +80,6 @@ Methods in Ecology and Evolution, 2022. (to appear)
 </p>
 </div>
 </li>
-
 
 
 <li>
