--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,8 @@
 						<div class="list-group-item">
 							<h3 class="pull-left"><i class="fa fa-coffee"></i></h3>
 							<h4>Office</h4>
-							<p class="list-group-item-text">Peterson Building, Department of Computer Science & Engineering, Texas A&M University, 435 Nagle Street, College Station, Tx</p>
+							<p class="list-group-item-text">Peterson Building, Department of Computer Science & Engineering, 
+								Texas A&M University, 435 Nagle Street, College Station, TX, 77843</p>
 						</div>
 							
 
