--- a/index.html
+++ b/index.html
@@ -31,10 +31,24 @@
 					<img class="img-responsive img-rounded" src="./aimerykong_files/profile_shu.jpg">
 				</div>
 				<div class="col-sm-10">
-          <p> I am an incoming assistant professor at <a href="https://www.tamu.edu/"> Texas A&M University</a> in the <a href="https://engineering.tamu.edu/cse/index.html"> CSE department</a>, where I lead the <a href="group.html">Computer Vision Lab</a>. My research interests span <strong>Computer Vision</strong> and <strong>Machine Learning</strong>, and their applications to autonomous vehicles and research in natural science. My current research focus is on <a href="http://www.cs.cmu.edu/~shuk/vplow.html"><strong>Visual Learning and Perception in the Open World</strong></a>. </p>
-					<p>	I am a postdoctoral fellow at the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, <a href="https://www.cmu.edu/">CMU</a>, working with <a href="http://www.cs.cmu.edu/~deva/">Deva Ramanan</a>. I received a Ph.D. from <a href="http://www.uci.edu/">UC-Irvine</a>, where I worked with <a href="http://www.ics.uci.edu/~fowlkes/">Charless Fowlkes</a>. </p>
-
-					<p><strong> I am looking for self-motivated Ph.D. students starting Spring/Fall 2023 from <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE department, TAMU</a>.</strong></p>
+        <p> I am an incoming assistant professor at <a href="https://www.tamu.edu/"> Texas A&M University</a> in the <a href="https://engineering.tamu.edu/cse/index.html">CSE department</a>, 
+		  where I lead the <a href="group.html">Computer Vision Lab</a>. 
+		  I am a postdoctoral fellow at the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, <a href="https://www.cmu.edu/">CMU</a>, 
+		  working with <a href="http://www.cs.cmu.edu/~deva/">Deva Ramanan</a>. 
+		  I received a Ph.D. from <a href="http://www.uci.edu/">UC-Irvine</a>, where I worked with <a href="http://www.ics.uci.edu/~fowlkes/">Charless Fowlkes</a>.
+	</p>
+	
+	<p>
+		My research interests span <strong>Computer Vision</strong> and <strong>applied Machine Learning</strong> (CV/ML), 
+		and their applications to autonomous vehicles and research in natural science. 
+		My current research in CV/ML focuses on <a href="https://vplow.github.io"><strong>Visual Learning and Perception in the Open World</strong></a>. 
+		My recent paper on this this topic was recognized for <a href="https://arxiv.org/abs/2104.02939">Best Paper / Marr Prize at ICCV 2021</a>.
+		I also actively apply my algorithms to interdisciplinary research including building a high-throughput pollen analysis system,
+		which was featured by the National Science Foundation as that “<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research">opens a new era of fossil pollen research</a>”.
+	</p>
+	
+	<p><strong> I am looking for self-motivated Ph.D. students starting Spring/Fall 2023 from <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE department, TAMU</a>.
+	</strong></p>
 
 
 contact
