--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
 		which was featured by the National Science Foundation as that “<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research">opens a new era of fossil pollen research</a>”.
 	</p>
 	
-	<p><strong> I am looking for self-motivated Ph.D. students starting Spring/Fall 2023 from <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE department, TAMU</a>.
-	</strong></p>
+	<p>
+		<font color="#8B0000"><strong>
+			I am looking for self-motivated PhD students starting Spring/Fall 2023 from <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE department, TAMU</a>.
+			PhD students will be fully funded with fellowships.
+			Please feel free to contact me if interested.
+		</strong></font>
+	</p>
 
 
 contact
