--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		My research interests span <strong>Computer Vision</strong> and <strong>applied Machine Learning</strong> (CV/ML), 
 		and their applications to autonomous vehicles and research in natural science. 
 		My current research in CV/ML focuses on <a href="https://vplow.github.io"><strong>Visual Learning and Perception in the Open World</strong></a>. 
-		My recent paper on this this topic was recognized for <a href="https://arxiv.org/abs/2104.02939">Best Paper / Marr Prize at ICCV 2021</a>.
+		My recent paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939">Best Paper / Marr Prize at ICCV 2021</a>.
 		I also actively apply my algorithms to interdisciplinary research including building a high-throughput pollen analysis system,
 		which was featured by the National Science Foundation as that “<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research">opens a new era of fossil pollen research</a>”.
 	</p>
