--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Congratulations to <a href="https://www.linkedin.com/in/yi-ting-chen-b6984694/">
 	<a href="https://www.linkedin.com/in/zelinye/">Zelin</a> on the <a href="https://eccv2022.ecva.net"  target="_blank">ECCV'22</a> 
 	<img src="./aimerykong_files/ECCV2022logo.png", width="70">
 	paper "<a href="https://arxiv.org/abs/2104.02904"  target="_blank">Multimodal Object Detection via Probabilistic Ensembling</a>",
-	which is accepted for <font color=ff3399>oral</font> presentation!
+	which is accepted for <font color=ff3399>oral presentation</font>!
 	The proposed method was ranked the first in the <a href="https://eval.ai/web/challenges/challenge-page/1247/leaderboard/3137">KAIST challenge leaderboard</a> by the ECCV'22 submission deadline.
 	Code is available in <a href="https://github.com/Jamie725/RGBT-detection">github</a>. (7/8/2022)
 </a>
@@ -141,7 +141,7 @@ Code is available in the <a href="https://github.com/ShadeAlsha/LTR-weight-balan
 <li>
 <p>
 Our paper <a href="https://aimerykong.github.io/OpenGAN.html">"OpenGAN: Open-Set Recognition via Open Data Generation"</a>
-received <font color=ff3399>Best Paper / Marr Prize</font> honorable mention at 
+received honorable mention for <font color=ff3399>Best Paper / Marr Prize</font> at 
 <a href="http://iccv2021.thecvf.com/" target="_blank">ICCV'21 <img src="./aimerykong_files/iccv21_logo.png", width="70"></a>.
 Watch this <a href="https://youtu.be/CNYqYXyUHn0">12min video</a>
 (10/12/2021) </p>
@@ -170,7 +170,7 @@ our <a href="http://vplow.github.io/open-world-vision.html">Open World Vision wo
 <li>
 <p>
 	Congratulations to <a href="https://www.ics.uci.edu/~yunhaz5" target="_blank">Yunhan Zhao</a> on the paper <a href="https://www.ics.uci.edu/~yunhaz5/cvpr2021/cpp.html">
-	"Camera Pose Matters: Improving Depth Prediction by Mitigating Pose Distribution Bias"</a>, which is accepted for <font color=ff3399>oral</font> presentation by 
+	"Camera Pose Matters: Improving Depth Prediction by Mitigating Pose Distribution Bias"</a>, which is accepted for <font color=ff3399>oral presentation</font> by 
 <a href="http://cvpr2021.thecvf.com/" target="_blank">CVPR'21 <img src="./aimerykong_files/logo_cvpr2021.png", width="45"></a> (03/3/2021) </p>
 </li>
 
