--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@ Congratulations to <a href="https://www.linkedin.com/in/yi-ting-chen-b6984694/">
 	
 <li>
 <p>
-Our paper "<a href="https://ieeexplore.ieee.org/document/9799769"  target="_blank">OpenGAN: Open-Set Recognition Via Open Data Generation</a>" 
+Our paper "<a href="https://github.com/aimerykong/aimerykong.github.io/raw/main/OpenGAN_files/PAMI_OpenGAN_accepted_version.pdf"  target="_blank">OpenGAN: Open-Set Recognition Via Open Data Generation</a>" 
 	has been published by <a href="https://ieeexplore.ieee.org/document/9799769"  target="_blank">IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI)</a>  (6/18/2022)
-</a>
 </li>
 		
 		
