--- a/publication.html
+++ b/publication.html
@@ -60,8 +60,12 @@ S. Kong, D. Ramanan,
 IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI), 2022.
 <br>
 [<a href="https://ieeexplore.ieee.org/document/9799769">paper</a>]
+[<a href="https://github.com/aimerykong/aimerykong.github.io/raw/main/OpenGAN_files/PAMI_OpenGAN_accepted_version.pdf">pdf</a> (18MB)]
 [<a href="https://www.cs.cmu.edu/~shuk/OpenGAN.html">page</a>]
 [<a href="https://github.com/aimerykong/OpenGAN">code</a>]
+[<a href="./img/OpenGAN_poster.pdf">poster</a>]
+[<a href="./img/OpenGAN_slides.pdf">slides</a>]
+[<a href="https://youtu.be/CNYqYXyUHn0">watch 12min video presentation</a>]
 </p>
 </div>
 </li>
@@ -123,6 +127,7 @@ Methods in Ecology and Evolution, 2022.
 <br>
 [<a href="http://aimerykong.github.io/OpenGAN.html">webpage</a>]
 [<a href="https://arxiv.org/abs/2104.02939">paper</a>]
+[<a href="https://github.com/aimerykong/aimerykong.github.io/raw/main/OpenGAN_files/PAMI_OpenGAN_accepted_version.pdf">PAMI version</a> (18MB)]
 [<a href="https://github.com/aimerykong/OpenGAN">github</a>]
 [<a href="./img/OpenGAN_poster.pdf">poster</a>]
 [<a href="./img/OpenGAN_slides.pdf">slides</a>]
