--- a/OpenGAN.html
+++ b/OpenGAN.html
@@ -89,6 +89,7 @@ Open-Set Recognition, Open-World, Generative Adversarial Networks, Semantic Segm
 <p>Shu Kong, Deva Ramanan, "<font color="#AF7817">OpenGAN: Open-Set Recognition via Open Data Generation</font>", <em>International Conference on Computer Vision (ICCV)</em>, 2021.
 <br>
 [<a href="https://arxiv.org/abs/2104.02939">paper</a>]
+[<a href="https://github.com/aimerykong/aimerykong.github.io/raw/main/OpenGAN_files/PAMI_OpenGAN_accepted_version.pdf">PAMI version</a> (18MB)]
 [<a href="https://github.com/aimerykong/OpenGAN">github</a>]
 [<a href="./img/OpenGAN_poster.pdf">poster</a>]
 [<a href="./img/OpenGAN_slides.pdf">slides</a>]
@@ -99,8 +100,28 @@ honorable mention for <font color=ff3399>Best Paper / Marr Prize</font>
 </div>
 </ul>
 
+
 <br>
 
+<div class="citing section">
+      <h2>Citing this work</h2>
+      <p>If you find this work useful in your research, please consider citing:</p>
+      <pre>@inproceedings{OpenGAN,
+           title={OpenGAN: Open-Set Recognition via Open Data Generation},
+           author={Kong, Shu and Ramanan, Deva},
+           booktitle={ICCV},
+           year={2021}
+           }
+      </pre>
+      <pre>@article{OpenGAN_PAMI,
+            title={OpenGAN: Open-Set Recognition via Open Data Generation},
+            author={Kong, Shu and Ramanan, Deva},
+            journal={IEEE PAMI},
+            year={2022}
+            }
+      </pre>
+</div>
+          
 <p>
 <h3>Acknowledgement</h3>
 This work was supported by the <a href="https://labs.ri.cmu.edu/argo-ai-center">CMU Argo AI Center for Autonomous Vehicle Research</a>
