--- a/publication.html
+++ b/publication.html
@@ -41,9 +41,9 @@
 		<a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>,
         <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, S. Kong<sup>#</sup>,
 "<font color=#AF7817>Multimodal Object Detection via Probabilistic Ensembling</font>", ECCV, 2022
-<a href="https://arxiv.org/abs/2104.02904">arXiv:2104.02904</a>
 <br>
 [<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">project page</a>]
+[<a href="https://arxiv.org/abs/2104.02904">paper</a>]
 [<a href="https://github.com/Jamie725/RGBT-detection">github</a>]
 [<a href="https://youtu.be/VH7826g8u7c">video demo</a>]
 </p>
@@ -59,9 +59,9 @@ S. Kong, D. Ramanan,
 "<a href="https://ieeexplore.ieee.org/document/9799769"><font color=#AF7817>OpenGAN: Open-Set Recognition via Open Data Generation</font></a>",
 IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI), 2022.
 <br>
+[<a href="https://www.cs.cmu.edu/~shuk/OpenGAN.html">webpage</a>]
 [<a href="https://ieeexplore.ieee.org/document/9799769">paper</a>]
 [<a href="https://github.com/aimerykong/aimerykong.github.io/raw/main/OpenGAN_files/PAMI_OpenGAN_accepted_version.pdf">pdf</a> (18MB)]
-[<a href="https://www.cs.cmu.edu/~shuk/OpenGAN.html">page</a>]
 [<a href="https://github.com/aimerykong/OpenGAN">code</a>]
 [<a href="./img/OpenGAN_poster.pdf">poster</a>]
 [<a href="./img/OpenGAN_slides.pdf">slides</a>]
@@ -79,7 +79,7 @@ S. Punyasena<sup>*</sup>, D. Haselhorst<sup>*</sup>,  S. Kong<sup>*</sup>, C. Fo
 Methods in Ecology and Evolution, 2022.
 <br>
 [<a href="https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.13917">paper</a>]
-[<a href="https://www.ics.uci.edu/~skong2/pollen_BIC.html">page</a>]
+[<a href="https://www.ics.uci.edu/~skong2/pollen_BIC.html">webpage</a>]
 [<a href="https://github.com/aimerykong/pollenDetClsSystem">code</a>]
 </p>
 </div>
