--- a/group.html
+++ b/group.html
@@ -15,7 +15,7 @@
 <body>
 
 	<div class="my-container">
-		<h1> Computational Vision at Texas A&M </h1>
+		<h1> Computer Vision Lab at Texas A&M </h1>
 		
 		
 		<div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
