--- a/publication.html
+++ b/publication.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -31,74 +32,195 @@
 
 <h3> Papers</h3>
 
-<ul>
-<li>
-<div class="publication">
-        <p>
-	<a href="https://sites.google.com/media.ee.ntu.edu.tw/yitingchen">Yi-Ting Chen</a><sup>*</sup>, 
-		<a href="https://www.linkedin.com/in/jinghao-shi-82371919b/">Jinghao Shi</a><sup>*</sup>, 
-		<a href="https://www.linkedin.com/in/zelinye/">Zelin Ye</a><sup>*</sup>, 
-		<a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>,
-        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, S. Kong<sup>#</sup>,
-"<font color=#AF7817>Multimodal Object Detection via Probabilistic Ensembling</font>", ECCV, 2022
+
+
+
+
+<font face="helvetica, ariel, 'sans serif'">
+<table cellspacing="15"> 
+<tbody>
+
+<tr>
+<td width="35%" height=150>
+<a href="https://github.com/Jamie725/RGBT-detection">
+<img src="aimerykong_files/ECCV22-RGBT-Det.jpg" height="110" border="0">
+</a><br>
+</td>
+<td>
+<a href="https://github.com/Jamie725/RGBT-detection">
+<b>Multimodal Object Detection via Probabilistic Ensembling</b></a>
+<br>
+<a href="https://sites.google.com/media.ee.ntu.edu.tw/yitingchen">Y-T Chen</a><sup>*</sup>, 
+		<a href="https://www.linkedin.com/in/jinghao-shi-82371919b/">J. Shi</a><sup>*</sup>, 
+		<a href="https://www.linkedin.com/in/zelinye/">Z. Ye</a><sup>*</sup>, 
+		<a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">C. Mertz</a>,
+        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, S. Kong<sup>#</sup> <br>
+in ECCV 2022 (<font color=ff3399>oral presentation</font>)
 <br>
 [<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">project page</a>]
 [<a href="https://arxiv.org/abs/2104.02904">paper</a>]
 [<a href="https://github.com/Jamie725/RGBT-detection">github</a>]
-[<a href="https://youtu.be/VH7826g8u7c">video demo</a>]
-</p>
-</div>
-</li>
-	
-	
-	
-<li>
-<div class="publication">
-<p>
-S. Kong, D. Ramanan,
-"<a href="https://ieeexplore.ieee.org/document/9799769"><font color=#AF7817>OpenGAN: Open-Set Recognition via Open Data Generation</font></a>",
-IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI), 2022.
+[<a href="https://youtu.be/VH7826g8u7c">video demo</a>]<br>
+</td>
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://github.com/aimerykong/OpenGAN">
+<img src="aimerykong_files/PAMI-OpenGAN.jpg" height="120" border="0">
+</a><br>
+</td>
+<td>
+<a href="https://github.com/aimerykong/OpenGAN">
+<b>OpenGAN: Open-Set Recognition via Open Data Generation</b></a>
 <br>
-[<a href="https://www.cs.cmu.edu/~shuk/OpenGAN.html">webpage</a>]
+S. Kong, <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a> <br>
+IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI), 2022<br>
+[<a href="https://github.com/aimerykong/OpenGAN">webpage</a>]
 [<a href="https://ieeexplore.ieee.org/document/9799769">paper</a>]
 [<a href="https://github.com/aimerykong/aimerykong.github.io/raw/main/OpenGAN_files/PAMI_OpenGAN_accepted_version.pdf">pdf</a> (18MB)]
 [<a href="https://github.com/aimerykong/OpenGAN">code</a>]
 [<a href="./img/OpenGAN_poster.pdf">poster</a>]
 [<a href="./img/OpenGAN_slides.pdf">slides</a>]
-[<a href="https://youtu.be/CNYqYXyUHn0">watch 12min video presentation</a>]
-</p>
-</div>
-</li>
-	
-	
-<li>
-<div class="publication">
-<p>
-S. Punyasena<sup>*</sup>, D. Haselhorst<sup>*</sup>,  S. Kong<sup>*</sup>, C. Fowlkes, J. Moreno,
-"<a href="https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.13917"><font color=#AF7817>Automated Identification of Diverse Neotropical Pollen Samples using Convolutional Neural Networks</font></a>",
-Methods in Ecology and Evolution, 2022.
+[<a href="https://youtu.be/CNYqYXyUHn0">watch 12min video presentation</a>]<br>
+Journal version of <a href="https://arxiv.org/abs/2104.02939">ICCV 2021 paper</a> (<font color=ff3399>Marr Prize / Best Paper Honorable Mention</font>)
+</td>
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://github.com/aimerykong/pollenDetClsSystem">
+<img src="aimerykong_files/MEE2022.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.13917"><b>Automated Identification of Diverse Neotropical Pollen Samples using Convolutional Neural Networks</b></a>
 <br>
+<a href="http://publish.illinois.edu/punyasena/">S. Punyasena</a><sup>*</sup>,
+<a href="https://www.linkedin.com/in/derek-haselhorst-54aa97219/">D. Haselhorst</a><sup>*</sup>,  
+S. Kong<sup>*</sup>, 
+<a href="https://www.ics.uci.edu/~fowlkes/">C. Fowlkes</a>, 
+<a href="https://profiles.si.edu/display/nMorenoE872006">J. Moreno</a>
+<br>
+Methods in Ecology and Evolution, 2022<br>
 [<a href="https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.13917">paper</a>]
 [<a href="https://www.ics.uci.edu/~skong2/pollen_BIC.html">webpage</a>]
 [<a href="https://github.com/aimerykong/pollenDetClsSystem">code</a>]
-</p>
-</div>
-</li>
-
-
-<li>
-<div class="publication">
-	<p><a href="https://www.linkedin.com/in/salshamm/">S. Alshammari</a>, 
-	<a href="https://yxw.web.illinois.edu">Y. Wang</a>,
-        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a>, S Kong,
-	"<font color=#AF7817>Long-Tailed Recognition via Weight Balancing</font>", <a href="https://cvpr2022.thecvf.com">CVPR</a>, 2022
 <br>
+</td>
+
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://github.com/ShadeAlsha/LTR-weight-balancing">
+<img src="aimerykong_files/CVPR21-LTR.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://github.com/ShadeAlsha/LTR-weight-balancing"><b>Long-Tailed Recognition via Weight Balancing</b></a>
+<br>
+<a href="https://www.linkedin.com/in/salshamm/">S. Alshammari</a>, 
+	<a href="https://yxw.web.illinois.edu">Y. Wang</a>,
+        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a>, S Kong
+<br>
+In CVPR, 2021<br>
 [<a href="https://github.com/ShadeAlsha/LTR-weight-balancing">github</a>]
 [<a href="https://arxiv.org/abs/2203.14197">paper</a>]
 <br>
-</p>
-</div>
-</li>
+</td>
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://github.com/aimerykong/OpenGAN">
+<img src="aimerykong_files/PAMI-OpenGAN.jpg" height="120" border="0">
+</a><br>
+</td>
+<td>
+<a href="https://github.com/aimerykong/OpenGAN">
+<b>OpenGAN: Open-Set Recognition via Open Data Generation</b></a>
+<br>
+S. Kong, <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a> <br>
+In ICCV, 2021  (<font color=ff3399>Marr Prize / Best Paper Honorable Mention</font>)
+<br>
+[<a href="https://github.com/aimerykong/OpenGAN">webpage</a>]
+[<a href="https://arxiv.org/abs/2104.02939">paper</a>]
+[<a href="https://github.com/aimerykong/OpenGAN">code</a>]
+[<a href="./img/OpenGAN_poster.pdf">poster</a>]
+[<a href="./img/OpenGAN_slides.pdf">slides</a>]
+[<a href="https://youtu.be/CNYqYXyUHn0">watch 12min video presentation</a>]<br>
+See journal version published by PAMI [<a href="https://github.com/aimerykong/aimerykong.github.io/raw/main/OpenGAN_files/PAMI_OpenGAN_accepted_version.pdf">pdf</a> (18MB)] 
+</td>
+
+
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://www.ics.uci.edu/~yunhaz5/cvpr2021/cpp.html">
+<img src="aimerykong_files/CVPR21-campose.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://www.ics.uci.edu/~yunhaz5/cvpr2021/cpp.html"><b>Camera Pose Matters: Improving Depth Prediction by Mitigating Pose Distribution Bias</b></a>
+<br>
+<a href="https://www.ics.uci.edu/~yunhaz5/">Y. Zhao</a>,
+S. Kong,
+<a href="https://www.ics.uci.edu/~fowlkes/">C. Fowlkes</a>,
+<br>
+In CVPR, 2021  (<font color=ff3399>oral presentation</font>)
+<br>
+[<a href="https://www.ics.uci.edu/~yunhaz5/cvpr2021/cpp.html">Webpage</a>]
+[<a href="https://arxiv.org/abs/2007.03887">arxiv</a>]
+[<a href="https://github.com/yzhao520/CPP">github</a>]
+[<a href="https://www.ics.uci.edu/~yunhaz5/arXiv/CPP_poster.pdf">slides</a>]
+<br>
+</td>
+
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://github.com/aimerykong/deepPollen">
+<img src="aimerykong_files/PNAS20.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://www.pnas.org/content/117/45/28496"><b>Improving the Taxonomy of Fossil Pollen using Convolutional Neural Networks and Superresolution Microscopy</b></a>
+<br>
+<a href="https://www.linkedin.com/in/ingrid-romero-215347193/">I. Romero</a>, 
+S. Kong,
+<a href="https://www.ics.uci.edu/~fowlkes/">C. Fowlkes</a>,
+<a href="https://stri.si.edu/scientist/carlos-jaramillo">C. Jaramillo</a>, 
+M. Urban, 
+<a href="https://sites.google.com/a/mst.edu/francisca-oboh-ikuenobe/">F. Oboh-Ikuenobe</a>, 
+<a href="https://scholar.google.com/citations?hl=en&user=askuBtwAAAAJ&view_op=list_works">C. D'Apolito</a>, 
+<a href="http://publish.illinois.edu/punyasena/">S. Punyasena</a>
+<br>
+Proceedings of the National Academy of Sciences of the USA (PNAS), 2020 (<a href="https://www.nsf.gov/discoveries/disc_summ.jsp?cntn_id=301568&org=NSF&from=news"><font color=ff3399>Featured by NSF news</font></a>)
+<br>
+[<a href="https://doi.org/10.1073/pnas.2007324117">paper</a>][<a href="https://github.com/aimerykong/deepPollen">code</a>]
+<br>
+</td>
+
+
+</tbody>
+</table>
+
+
+
+<ul>
+
 
 
 <li>
@@ -111,65 +233,6 @@ Methods in Ecology and Evolution, 2022.
 [<a href="https://github.com/Samia067/ShoeRinsics">github</a>]
 [<a href="https://arxiv.org/abs/2205.02361">paper</a>]
 <br>
-</p>
-</div>
-</li>
-
-
-
-
-<li>
-<div class="publication">
-	<p>S. Kong,
-        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a>,
-	"<font color=#AF7817>OpenGAN: Open-Set Recognition via Open Data Generation</font>", <a href="http://iccv2021.thecvf.com/">ICCV</a>, 2021
-<!--a href="https://arxiv.org/abs/2104.02939">preprint arXiv:2104.02939</a-->
-<br>
-[<a href="http://aimerykong.github.io/OpenGAN.html">webpage</a>]
-[<a href="https://arxiv.org/abs/2104.02939">paper</a>]
-[<a href="https://github.com/aimerykong/aimerykong.github.io/raw/main/OpenGAN_files/PAMI_OpenGAN_accepted_version.pdf">PAMI version</a> (18MB)]
-[<a href="https://github.com/aimerykong/OpenGAN">github</a>]
-[<a href="./img/OpenGAN_poster.pdf">poster</a>]
-[<a href="./img/OpenGAN_slides.pdf">slides</a>]
-[<a href="https://youtu.be/CNYqYXyUHn0">watch 12min video presentation</a>]
-<br>
-<font color=ff3399>Marr Prize / Best Paper Honorable Mention</font>
-</p>
-</div>
-</li>
-
-
-
-
-
-
-<li>
-<div class="publication">
-        <p> <a href="https://www.ics.uci.edu/~yunhaz5/">Y. Zhao</a>,
-        <b>S. Kong</b>,
-	<a href="https://www.ics.uci.edu/~fowlkes/">C. Fowlkes</a>,
-"<font color=#AF7817>Camera Pose Matters: Improving Depth Prediction by Mitigating Pose Distribution Bias
-</font>",
-<a href="http://cvpr2021.thecvf.com/">CVPR</a>, 2021 
-<br>
-[<a href="https://www.ics.uci.edu/~yunhaz5/cvpr2021/cpp.html">project page</a>]
-[<a href="https://arxiv.org/abs/2007.03887">arxiv</a>]
-[<a href="https://github.com/yzhao520/CPP">github</a>]
-[<a href="https://www.ics.uci.edu/~yunhaz5/arXiv/CPP_poster.pdf">slides</a>]
-</p>
-</div>
-</li>
-
-
-<li>
-<div class="publication">
-<p>
-I. Romero, <b>S. Kong</b>, C. Fowlkes, C. Jaramillo, M. Urban, F. Oboh-Ikuenobe, C. D'Apolito, S. Punyasena,
-"<font color=#AF7817>Improving the Taxonomy of Fossil Pollen using Convolutional Neural Networks and Superresolution Microscopy</font>",
-<a href="https://www.pnas.org/content/117/45/28496">Proc. of the National Academy of Sciences (PNAS)</a>, 2020. 
-<br>
-[<a href="https://doi.org/10.1073/pnas.2007324117">paper</a>][<a href="https://github.com/aimerykong/deepPollen">code</a>]
-[<a href="https://www.nsf.gov/discoveries/disc_summ.jsp?cntn_id=301568&org=NSF&from=news">NSF news</a>]
 </p>
 </div>
 </li>
