--- a/publication.html
+++ b/publication.html
@@ -545,6 +545,33 @@ In ECCV, 2016.
 <br>
 </td>
 
+
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://github.com/aimerykong/PatchMatchingForPollenIdentification">
+<img src="aimerykong_files/CVPR15-CVMI.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://github.com/aimerykong/PatchMatchingForPollenIdentification"><b>
+Spatially Aware Dictionary Learning and Coding for Fossil Pollen Identification</b></a>
+<br>
+S. Kong,
+<a href="http://publish.illinois.edu/punyasena/">S. Punyasena</a>,
+<a href="https://www.ics.uci.edu/~fowlkes/">C. Fowlkes</a>
+<br>
+In CVMI@CVPR, 2015
+<br>
+[<a href="https://github.com/aimerykong/PatchMatchingForPollenIdentification">github</a>]
+[<a href="http://arxiv.org/abs/1605.00775">paper</a>]
+<br>
+</td>
+
+
 </tbody>
 </table>
 
@@ -554,19 +581,6 @@ In ECCV, 2016.
 
 
 
-<li>
-<div class="publication">
-
-<p> <b>S. Kong</b>, S. Punyasena, C. Fowlkes, "<font color=#AF7817>Spatially Aware Dictionary Learning and Coding for Fossil Pollen Identification</font>",
-        <a href="http://www.albany.edu/celltracking/CVMI/"><em>CVPR CVMI Workshop</em></a>, Los Vegas, NV, (July 2016).
-<br>
-<a href="pollen.html">[project page with code&demo]</a> [<a href="http://arxiv.org/abs/1605.00775">paper</a>]
-[<a href="img/fossilpollen_cvprcvmi2016.bib">bibtex</a>]
-[<a href="img/fossil_pollen_spotlight_ver3.pdf">talk</a>]
-[<a href="img/fossil_pollen_poster_v5.pdf">poster</a>]
-</p>
-</div>
-</li>
 
 <li>
 <div class="publication">
